--- a/widgets/biginnew/SMSMagicForBigin/package.json
+++ b/widgets/biginnew/SMSMagicForBigin/package.json
@@ -9,9 +9,12 @@
     "body-parser": "^1.14.2",
     "chalk": "^1.1.3",
     "errorhandler": "^1.4.2",
-    "express": "^4.17.1",
+    "express": "^4.13.3",
     "i18next": "^10.0.7",
     "morgan": "^1.6.1",
     "serve-index": "^1.9.0"
+  },
+  "devDependencies": {
+    "zet": "^1.1.0"
   }
 }
